@@ -1,3 +1,4 @@
+-HH sets the hostname to the full dns name looked up if we need to.
 Fix arp compilation warning on GCC-4.2.0.
 Enable DHCP_INFORM support via the -s option again, moving DHCP_REQUEST
 to the -r option. This makes us more compatible with dhcpcd-1.x and 2.x.
